FIX: Overflow in Shared Container

--- a/Resources/Public/CSS/theme.css
+++ b/Resources/Public/CSS/theme.css
@@ -270,7 +270,6 @@
     clear: both;
     float: left;
     width: 100%;
-    overflow: hidden;
 }
 
 .social_share_privacy_area {
